Removed unused imports and added documentation