@@ -25,7 +25,7 @@ import org.tweetyproject.commons.util.*;
 
 /**
  * This class models the normalized MI inconsistency measure, see [PhD thesis, Thimm].
- * 
+ *
  * @author Matthias Thimm
  * @param <S> the type of formulas
  */
@@ -45,9 +45,9 @@ public class NormalizedMiInconsistencyMeasure<S extends Formula> extends MiIncon
 	@Override
 	public Double inconsistencyMeasure(Collection<S> beliefSet) {
 		Double value = super.inconsistencyMeasure(beliefSet);
-		if(value == 0) return value;
-		@SuppressWarnings("deprecation")
-		double normFactor = MathTools.binomial(beliefSet.size(), new Double(Math.ceil(new Double(beliefSet.size()) / 2)).intValue());
+		if (value == 0) return value;
+
+		double normFactor = MathTools.binomial(beliefSet.size(), Double.valueOf(Math.ceil(Double.valueOf(beliefSet.size()) / 2)).intValue());
 		return value / normFactor;
 	}
 }
